--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,14 @@
 
 {{ 2+2 }}
 
-<ul>
-    <li ng-repeat="product in products.data">
-        {{ product.name }}
-    </li>
-</ul>
+<table>
+    <tr ng-repeat="product in products.data">
+        <td>{{ product.name }}</td>
+        <td>
+            <button ng-click="deleteProduct(product)">Delete {{product.name}}</button>
+        </td>
+    </tr>
+</table>
 
 <input type="text" ng-model="newProduct" />
 <button ng-click="saveProduct(newProduct)">Save Product!</button>
