--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>index page</title>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body ng-app="jetbrains" ng-controller="AppCtrl as app">
 
-{{ 2+2 }}
+Angular test: 2+2={{ 2+2 }}
 
 <table>
     <tr ng-repeat="product in products.data">
@@ -18,10 +19,13 @@
             <button ng-click="deleteProduct(product)">Delete {{product.name}}</button>
         </td>
     </tr>
+<tr>
+    <td><input type="text" placeholder="New Product name" ng-model="newProduct" /></td>
+    <td><button ng-click="saveProduct(newProduct)">Save Product!</button></td>
+
+</tr>
 </table>
 
-<input type="text" ng-model="newProduct" />
-<button ng-click="saveProduct(newProduct)">Save Product!</button>
 
 <script src="bower_components/angular/angular.js"></script>
 <script src="app.js"></script>
